# plc

./: README.md
hw1/: README.md  config.py  decode.py  defibb.asm  encode.py  fibb.asm  vm.py
hw1/text/: instructions.md  language.md  task.md
hw2/: CMakeLists.txt  Exceptions.cpp  Exceptions.h  Objects.cpp  Objects.h  README.md  main.cpp  utils.h
hw2/tests/: README.md  emergency.cpp  nestedexception.cpp  types.cpp
hw2/text/: specification.md  task.md
hw3/: Base.h  CMakeLists.txt  Derived.h  README.md  main.cpp  utils.h
hw3/text/: task.md
hw4/: CMakeLists.txt  README.md  RTTI.cpp  RTTI.h  main.cpp  utils.h
hw4/src/: Analyst.cpp  Analyst.h  Mathematician.cpp  Mathematician.h  Person.cpp  Person.h  Programmer.cpp  Programmer.h
hw4/text/: task.md
hw5/: LINQ.py  README.md  main.py
hw5/text/: sample.txt  task.md
